Changed md files to real things

--- a/elements/quick-look/quick-look.html
+++ b/elements/quick-look/quick-look.html
@@ -107,7 +107,7 @@
                     },
                     selected: {
                         type: String,
-                        value: "0",
+                        value: "none",
                     }
                 };
             }
