--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#6b9272">
     <meta name="msapplication-TileColor" content="#6b9272">
     <!-- Import polyfill -->
-    <!--<script src="./bower_components/webcomponentsjs/webcomponents-lite.js" async></script>-->
+    <script src="./bower_components/webcomponentsjs/webcomponents-lite.js" async></script>
     <!-- Import custom elements -->
     <link rel="import" href="./elements/quick-look/quick-look.html" async>
     <!--Import Font-->
