Trying to add prompt for keyboard

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                 this.newLine();
             }
             this.prompt();
+            prompt();
         }
 
         function termHandler() {
