Update help function

--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
                 this.write("  %cEclear       %c3-%c0 Clears screen%n");
                 this.write("  %cEcls         %c3-%c0 cls%c8->%c0clear%n");
                 this.write("%cA! %cEcat  %cD<file> %c3-%c0 Print out file%n");
-                this.write("  %cEls          %c3-%c0 ls%c8->%c0ls .%n");
                 this.write("  %cEls   %cD<dir>  %c3-%c0 List files%n");
+                this.write("  %cEcd   %cD<dir>  %c3-%c0 change dir%n");
                 this.write("  %cEpwd         %c3-%c0 current dir%n");
                 this.write("  %cEhref %cD<link> %c3-%c0 Follow link%n");
             } else {
