Added photgraphy page

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
             <div id="termDiv"></div>
             <nav>
                 <a id="recommendationIndex" on-mouseover="show" on-mouseleave="hide"
-                    href="http://www.sawaiz.com">Reccomendation Index</a>
+                href="http://www.sawaiz.com">Reccomendation Index</a>
+                <a id="github" href="./photography">Photgraphy</a>
                 <a id="github" href="http://www.github.com/sawaiz">Github</a>
                 <a id="cv" href="https://github.com/Sawaiz/curriculumVitae/raw/master/cv.pdf">CV</a>
                 <a id="contact" href="mailto:webmaster@sawaizsyed.com">Contact</a>
