Added more spacing, fixed id

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             width: 100%;
             font-weight: 100;
             list-style: none;
-            margin: 0;
+            margin: 1vh 0 0 0;
             padding: 0;
         }
 
@@ -130,7 +130,7 @@
             <nav>
                 <a id="recommendationIndex" on-mouseover="show" on-mouseleave="hide"
                 href="http://www.sawaiz.com">Reccomendation Index</a>
-                <a id="github" href="./photography">Photgraphy</a>
+                <a id="photography" href="./photography">Photgraphy</a>
                 <a id="github" href="http://www.github.com/sawaiz">Github</a>
                 <a id="cv" href="https://github.com/Sawaiz/curriculumVitae/raw/master/cv.pdf">CV</a>
                 <a id="contact" href="mailto:webmaster@sawaizsyed.com">Contact</a>
