Added challenge docs

--- a/residence/larkspur/index.html
+++ b/residence/larkspur/index.html
@@ -20,7 +20,7 @@
         
         <h2>Overview</h2>
         <ul>
-            <li>60m^2 with 3m ceilings</li>
+            <li>60m^2 (~620 sqft) with 3m (9') ceilings</li>
             <li>2nd floor out of building with 6 floors</li>
             <li>Building from 1905, renovated 2017 prior to move in</li>
             <li>Custom fitted kitchen</li>
@@ -40,23 +40,29 @@
         <h2>Amenities</h2>
         <ul>
             <li>Natural gas hookup</li>
+            <li>Elevator</li>
             <li>Hot water radiators</li>
             <li>Large windows</li>
             <li>Vodafone 100mbps internet (400mbps availible)</li>
-            <li>Google home and Philips hue intergration</li>
+            <li>Google Home and Philips Hue intergration</li>
             <li>All incancdecent Bulbs replaced with LEDs</li>
         </ul>
 
         <h2>Shopping</h2>
         <ul>
-            <li>6m - EDEKA </li>
-            <li>5m - Bio Company</li>
-            <li>4m - Eurogida</li>
+            <li>6 min walk - EDEKA </li>
+            <li>5 min walk - Bio Company</li>
+            <li>4 min walk - Eurogida</li>
         </ul>
 
         <h2>Floorplan</h2>
 
+        three.js of revit export.
+        Image of floorplan.
+
         <h3>Entryway</h3>
+
+        Immage of empty entryway
 
         <h3>Bedroom</h3>
             <div id="bedroomEmpty" class="panorama"></div>
@@ -83,8 +89,9 @@
 
         <h2>Furnishings</h2>
         <p>Most of the furniture is from IKEA and with preference to the Malm line. The bedroom is is themed dark with black or black brown furniture, and black and white film prints on the walls. The living room is given more color with full color photographs and a dark green sofa while the kitchen and dining area is kept iwth a rustic feel with unfinished wood, open shelving, and a abundance of texitles and glass.</p>
+        
         <h3>Kitchen, Dining, Pantry</h3>
-        <a href="./full/kitchenFinsihed.jpg"> <img src="./kitchenFinsihed.jpg"></a>        
+        <a href="./full/kitchenFinished.jpg"> <img src="./kitchenFinished.jpg"></a>        
         <ul>
             <li>Villeroy & Boch Porcelain Sink</li>
             <li>Miele washer with condenser dryer</li>
@@ -92,6 +99,14 @@
             <li>Liebherr Refrigerator</li>
             <li>Custom modular open source framing system (<a href="https://github.com/sawaiz/larkspurKitchen">CAD</a>)</li>
         </ul>
+
+        <a href="./living.pano.jpg"> <img src="./living.pano.jpg"></a>  
+        <p>Panoramic view of furnished great room from living room.</p>      
+
+        <a href="./kitchen.pano.jpg"> <img src="./kitchen.pano.jpg"></a>        
+        <p>Panoramic view of furnished great room from dining room.</p>      
+
+
         <h3>Bedroom</h3>
         <a href="./full/bedView.jpeg"> <img src="./bedView.jpeg"></a>        
         <ul>
@@ -103,6 +118,8 @@
             <li><a href="https://www.ikea.com/gb/en/p/arstid-table-lamp-nickel-plated-white-00280637/">Årstid Table Lamp</a></li>
             <li>Custom 160cmx106cm linen covered pinboard</li>
         </ul>
+
+        <footer style="text-align: center;">Contact <a href="mailto:larkspur@sawaizsyed.com">larkspur@sawaizsyed.com</a> </footer>
 
 
 		<script>
